# ofossa

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: __main__.py
